--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aghaffar570/got-names",
-  "version": "1.1.0",
+  "version": "1.2.0-beta.0",
   "description": "Get random GOT names",
   "main": "src/index.js",
   "scripts": {
